// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReportsLayoutTemplate > renders correctly in mobile view 1`] = `
<v-row-stub
  class="bg-quaternary-dark flex-nowrap fill-height"
  data-v-ed62b159=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="compact-layout-nav"
    cols="false"
    data-v-ed62b159=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    
    
  </v-col-stub>
  <v-col-stub
    class="compact-layout-content"
    cols="false"
    data-v-ed62b159=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <!-- HEADER ROW -->
    <!--v-if-->
    <!-- FILTERS CARD -->
    <!--v-if-->
    <!-- MAIN CARD -->
    <v-sheet-stub
      border="false"
      class="ma-4 pa-4"
      color="white"
      data-v-ed62b159=""
      tag="div"
      tile="false"
    >
      <!-- OPTIONS ROW -->
      <v-row-stub
        class="flex-nowrap"
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <!--v-if-->
        <v-col-stub
          class="d-flex overflow-auto flex-shrink-0 flex-grow"
          cols="false"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-spacer-stub
            data-v-ed62b159=""
            tag="div"
          />
          
          
        </v-col-stub>
      </v-row-stub>
      <!-- CHART ROW -->
      <v-row-stub
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="chart-height"
          cols="12"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
      </v-row-stub>
      <!-- LEGEND ROW -->
      <v-row-stub
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          cols="12"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
      </v-row-stub>
    </v-sheet-stub>
    <!-- TABLE  -->
    <!--v-if-->
  </v-col-stub>
</v-row-stub>
`;

exports[`ReportsLayoutTemplate > renders correctly on large screen 1`] = `
<v-row-stub
  class="bg-quaternary-dark flex-nowrap fill-height pt-8 px-4"
  data-v-ed62b159=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="compact-layout-nav"
    cols="false"
    data-v-ed62b159=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    
    
  </v-col-stub>
  <v-col-stub
    class="compact-layout-content"
    cols="false"
    data-v-ed62b159=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <!-- HEADER ROW -->
    <v-row-stub
      class="align-start justify-space-between mb-6 flex-nowrap compact-header-content"
      data-v-ed62b159=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      
      
      
      
    </v-row-stub>
    <!-- FILTERS CARD -->
    <!--v-if-->
    <!-- MAIN CARD -->
    <v-sheet-stub
      border="false"
      class="ma-4 pa-4"
      color="white"
      data-v-ed62b159=""
      tag="div"
      tile="false"
    >
      <!-- OPTIONS ROW -->
      <v-row-stub
        class="flex-nowrap"
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="flex-grow-0 flex-shirink-0"
          cols="false"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
        <v-col-stub
          class="d-flex overflow-auto flex-shrink-0 flex-grow"
          cols="false"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-spacer-stub
            data-v-ed62b159=""
            tag="div"
          />
          
          
        </v-col-stub>
      </v-row-stub>
      <!-- CHART ROW -->
      <v-row-stub
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="chart-height"
          cols="12"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
      </v-row-stub>
      <!-- LEGEND ROW -->
      <v-row-stub
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          cols="12"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
      </v-row-stub>
    </v-sheet-stub>
    <!-- TABLE  -->
    <!--v-if-->
  </v-col-stub>
</v-row-stub>
`;

exports[`ReportsLayoutTemplate > renders correctly on medium screen 1`] = `
<v-row-stub
  class="bg-quaternary-dark flex-nowrap fill-height pt-8 px-4"
  data-v-ed62b159=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="compact-layout-nav"
    cols="false"
    data-v-ed62b159=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    
    
  </v-col-stub>
  <v-col-stub
    class="compact-layout-content"
    cols="false"
    data-v-ed62b159=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <!-- HEADER ROW -->
    <v-row-stub
      class="align-start justify-space-between mb-6 flex-nowrap compact-header-content"
      data-v-ed62b159=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      
      
      
      
    </v-row-stub>
    <!-- FILTERS CARD -->
    <!--v-if-->
    <!-- MAIN CARD -->
    <v-sheet-stub
      border="false"
      class="ma-4 pa-4"
      color="white"
      data-v-ed62b159=""
      tag="div"
      tile="false"
    >
      <!-- OPTIONS ROW -->
      <v-row-stub
        class="flex-nowrap"
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="flex-grow-0 flex-shirink-0"
          cols="false"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
        <v-col-stub
          class="d-flex overflow-auto flex-shrink-0 flex-grow"
          cols="false"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-spacer-stub
            data-v-ed62b159=""
            tag="div"
          />
          
          
        </v-col-stub>
      </v-row-stub>
      <!-- CHART ROW -->
      <v-row-stub
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="chart-height"
          cols="12"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
      </v-row-stub>
      <!-- LEGEND ROW -->
      <v-row-stub
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          cols="12"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
      </v-row-stub>
    </v-sheet-stub>
    <!-- TABLE  -->
    <!--v-if-->
  </v-col-stub>
</v-row-stub>
`;

exports[`ReportsLayoutTemplate > renders correctly on medium screen when isSideMenuMini is true 1`] = `
<v-row-stub
  class="bg-quaternary-dark flex-nowrap fill-height pt-8 px-4"
  data-v-ed62b159=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="compact-layout-nav"
    cols="false"
    data-v-ed62b159=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    
    
  </v-col-stub>
  <v-col-stub
    class="compact-layout-content"
    cols="false"
    data-v-ed62b159=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <!-- HEADER ROW -->
    <v-row-stub
      class="align-start justify-space-between mb-6 flex-nowrap compact-header-content"
      data-v-ed62b159=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      
      
      
      
    </v-row-stub>
    <!-- FILTERS CARD -->
    <!--v-if-->
    <!-- MAIN CARD -->
    <v-sheet-stub
      border="false"
      class="ma-4 pa-4"
      color="white"
      data-v-ed62b159=""
      tag="div"
      tile="false"
    >
      <!-- OPTIONS ROW -->
      <v-row-stub
        class="flex-nowrap"
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="flex-grow-0 flex-shirink-0"
          cols="false"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
        <v-col-stub
          class="d-flex overflow-auto flex-shrink-0 flex-grow"
          cols="false"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-spacer-stub
            data-v-ed62b159=""
            tag="div"
          />
          
          
        </v-col-stub>
      </v-row-stub>
      <!-- CHART ROW -->
      <v-row-stub
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="chart-height"
          cols="12"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
      </v-row-stub>
      <!-- LEGEND ROW -->
      <v-row-stub
        data-v-ed62b159=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          cols="12"
          data-v-ed62b159=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          
          
        </v-col-stub>
      </v-row-stub>
    </v-sheet-stub>
    <!-- TABLE  -->
    <!--v-if-->
  </v-col-stub>
</v-row-stub>
`;
